@@ -1,5 +1,11 @@
 # frozen-string-literal: true
 
+begin
+  require 'rack/files'
+rescue LoadError
+  require 'rack/file'
+end
+
 #
 class Roda
   module RodaPlugins
