@@ -2,6 +2,12 @@
 
 require 'uri'
 
+begin
+  require 'rack/files'
+rescue LoadError
+  require 'rack/file'
+end
+
 #
 class Roda
   module RodaPlugins
